@@ -9,20 +9,56 @@ module com.cardiolink {
     requires javafx.graphics;
     requires javafx.base;
 
-    // --- Database & External Libraries ---
+    // --- Core Java Modules ---
     requires java.sql;
+    requires java.net.http;
+    requires jdk.httpserver;
+    requires java.desktop; // Added from File 1
+
+    // --- UI & External JavaFX Libraries ---
     requires org.controlsfx.controls;
     requires com.dlsc.formsfx;
     requires net.synedra.validatorfx;
     requires org.kordamp.ikonli.javafx;
     requires org.kordamp.bootstrapfx.core;
     requires com.almasb.fxgl.all;
+
+    // --- Security, WebSockets, JSON, Logging & HTTP ---
     requires jbcrypt;
-    requires org.java_websocket;
     requires org.json;
+    requires com.fasterxml.jackson.databind;
+    requires okhttp3;
+    requires org.java_websocket;
+    requires org.slf4j; // Added from File 1
+
+    // --- Payment APIs ---
+    requires stripe.java; // Added from File 1
+
+    // --- Google Calendar & Auth APIs ---
+    // These JARs are not proper JPMS modules (unnamed module / classpath).
+    // Access is granted via --add-reads in pom.xml compiler args.
+
+    // --- Media & Processing ---
+    requires cloudinary.http44;
+    requires cloudinary.core;
+    requires opencv;
+
+    // --- Mail ---
+    requires jakarta.mail;
+    requires jakarta.activation;
+    // requires java.mail; // REMOVED to prevent conflict. Tell the team to use jakarta.mail!
+
+    // --- Documents (PDF) ---
+    // iText 7 (from File 2)
+    requires kernel;
+    requires layout;
+    requires io;
+    requires commons;
+    // Apache PDFBox (from File 1)
+    requires org.apache.pdfbox;
+    requires java.mail;
 
     // --- Package Exports ---
-    // These allow other modules to use your classes (e.g., during compilation)
     exports com.cardiolink;
     exports com.cardiolink.Models;
     exports com.cardiolink.Services;
@@ -36,9 +72,9 @@ module com.cardiolink {
     opens com.cardiolink.Controllers to javafx.fxml;
     opens com.cardiolink.Services to javafx.fxml;
     opens com.cardiolink.utils to javafx.fxml;
+    opens com.cardiolink.WebSocket to javafx.fxml;
 
     // Models need 'javafx.base' for TableView/TableColumn property mapping
-    // Also opens to fxml in case you use models inside FXML files (like ChoiceBox)
     opens com.cardiolink.Models to javafx.base, javafx.fxml;
 
     // Opening Test to graphics allows the Application class to launch properly
